--- a/portfolio/src/global.css
+++ b/portfolio/src/global.css
@@ -5,8 +5,9 @@
 }
 
 body {
+  margin-top: 2.5em;
   font-family: 'Helvetica Neue', sans-serif;
-  background-color: #f9f9f9;
+  background-color: #1f1f1f;
   color: #333;
   line-height: 1.6;
 }
