--- a/portfolio/src/components/Navbar.module.css
+++ b/portfolio/src/components/Navbar.module.css
@@ -29,10 +29,10 @@ li h2 {
 li a {
     float: right;
     color: #d1d1d1;
-    padding: 1.6em 1.8em;
+    padding: 1.7em 1.8em;
     text-decoration: none;
 }
 
 li a:hover, .active {
-    background-color: #242424;
+    background-color: #1f1f1f;
 }
