--- a/portfolio/src/components/ProjectDisplay.module.css
+++ b/portfolio/src/components/ProjectDisplay.module.css
@@ -1,24 +1,38 @@
 .title {
-    font-size: 2em;
+    font-size: 2.5em;
 }
 
 .list {
-    list-style-type: none;
-    text-align: center;
+    list-style-type:none;
+    display: flex;
+    justify-content: center; 
     margin: 0;
     padding: 0;
     overflow: hidden;
     width: 100%;
-
 }
 
 .items {
     text-align: center;
     display: block;
     float: left;
-    padding: .5em 1em;
-    margin: .5em;
-    color: #878787;
+    padding: 0em 1em;
+    margin: 0.5em;
+    color: #9f9f9f;
     border: 1px solid #393939;
     border-radius: 50px;
+}
+
+.img {
+    border-radius: 25px;
+    margin: 5%;
+    padding: 0;
+    width: 100%;
+}
+
+.projectContainer {
+    margin-top: 5%;
+    background-color: #111111;
+    border-radius: 25px;
+    box-shadow: 5px 5px 5px#0f0f0f;
 }
