--- a/portfolio/src/global.css
+++ b/portfolio/src/global.css
@@ -45,11 +45,6 @@ hr {
   background-color: #967ca6;
 }
 
-p {
-  text-align: left;
-  margin: 0 auto;
-}
-
 a {
   color: #e6e6e6;
   text-decoration: none;
@@ -79,6 +74,17 @@ textarea {
   padding: 5px;
 }
 
+.text {
+  text-align: left;
+  margin: 0 auto;
+}
+
+.textTwo {
+  text-align: left;
+  margin: 0 auto;
+  max-width: 60%;
+}
+
 .underlined {
   text-decoration: underline; 
   text-decoration-color: #967ca6;
@@ -95,6 +101,11 @@ textarea {
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+}
+
+.flexAdjustment {
+  margin-top: 7%;
+  padding-left: 6%;
 }
 
 .flexContainer {
@@ -121,18 +132,20 @@ textarea {
 }
 
 .contactContainer {
-  margin-top: 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 25px;
-  justify-content: space-evenly;
+  width: 100%;
+  max-width: 600px;
+  margin: 0 auto;
 }
 
 .contactInput {
   padding-left: 5px;
   font-size: 1em;
-  width: 400px;
+  width: 100%;
+  max-width: 400px;
   height: 50px;
   border: none;
   outline: none;
