--- a/portfolio/src/components/Navbar.module.css
+++ b/portfolio/src/components/Navbar.module.css
@@ -35,3 +35,14 @@
 .active {
     background-color: #1f1f1f;
 }
+
+@media (max-width: 768px) {
+    .title {
+       width: 200px;
+        font-size: 1em;
+    }
+
+    .link {
+        padding: 1em 0.5em;
+    }
+}
